--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cli-table": "0.3.1",
     "decompress-zip": "0.2.0",
     "entitlements": "1.2.0",
+    "es6-promisify": "^5.0.0",
     "glob": "5.0.10",
     "lodash": "3.9.3",
     "meow": "3.1.0",
